New streato css cards and detail page

--- a/src/components/AboutUs/BuisnessHighlights/BuisnessHighlights.css
+++ b/src/components/AboutUs/BuisnessHighlights/BuisnessHighlights.css
@@ -1,8 +1,15 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 .buisness-highlights h1 {
   font-size: 2.5rem;
   text-align: center;
   font-weight: 700;
-  margin: 2rem 0 4rem;
+  margin: 2rem 0;
   color: #3e313e;
 }
 .buisness-highlights__items {
@@ -14,7 +21,7 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-bottom: 10rem;
+  margin-bottom: 3rem;
   padding-left: 0;
 }
 
@@ -80,7 +87,7 @@
   }
 
   .buisness-highlights h1 {
-    margin: 5rem 0;
+    margin: 2.5rem 0;
     font-size: 2rem;
   }
 
