--- a/src/components/Restaurants/Restaurants.css
+++ b/src/components/Restaurants/Restaurants.css
@@ -12,17 +12,54 @@
   flex-wrap: wrap;
 }
 
-.restaurant-item {
-  position: relative;
+.badges {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  top: 1rem;
+}
+
+.badges h1 {
+  color: #fff;
+  font-size: 1rem;
+  padding: 0.25rem 0.8rem 0.25rem 0.25rem;
+  background: linear-gradient(to left, #fcc70c, #f55826);
+  margin: 0;
+}
+
+.badges p {
+  background-color: #000;
+  color: #fcc70c;
+  font-weight: 900;
+  border-radius: 25px;
+  padding-left: 0.5rem;
+  margin-right: 0.5rem;
+  overflow: hidden;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.badges span {
+  background-color: #fff;
+  color: #000;
+  border-radius: 25px;
+  font-weight: 400;
+  padding: 0 0.5rem;
 }
 
 .restaurant-card {
   border-radius: 12px;
-  -webkit-box-shadow: 2px 2px 8px rgb(0, 0, 0, 0.3);
-  box-shadow: 2px 2px 8px rgb(0, 0, 0, 0.3);
   margin: 10px 20px;
   width: 25rem;
   overflow: hidden;
+  position: relative;
+}
+
+.restaurant-card:hover {
+  -webkit-box-shadow: 2px 2px 8px rgb(0, 0, 0, 0.3);
+  box-shadow: 2px 2px 8px rgb(0, 0, 0, 0.3);
 }
 
 .restaurant-card a:hover {
@@ -41,58 +78,8 @@
   object-fit: cover;
 }
 
-.restaurant-badge {
-  position: absolute;
-  top: 2rem;
-  left: -0.8rem;
-  background-color: #000;
-  color: #fff;
-  height: 2rem;
-  width: 10rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  border-radius: 4px;
-  border-bottom-left-radius: 0;
-}
-
-.restaurant-badge h1 {
-  font-size: 1.2rem;
-  font-weight: 900;
-  text-shadow: 0.8px 0 white;
-}
-
-.restaurant-badge h1 span:first-of-type {
-  color: red;
-  text-shadow: 0.8px 0 red;
-}
-
-.restaurant-badge h1 span:last-of-type {
-  color: darkgreen;
-  text-shadow: 0.8px 0 darkgreen;
-}
-
-.restaurant-badge__bottom {
-  position: absolute;
-  top: 2.4rem;
-  left: -0.3rem;
-  background-color: #000;
-  width: 2.3rem;
-  height: 2.3rem;
-  z-index: -100;
-  -webkit-transform: rotate(30deg);
-  -ms-transform: rotate(30deg);
-  transform: rotate(30deg);
-}
-
 .restaurant__info {
-  padding: 0.8rem 1rem;
+  padding: 0.4rem 1rem;
 }
 
 .restaurant__name-ratings {
@@ -105,21 +92,22 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-bottom: 0.2rem;
 }
 
 .restaurant__name-ratings h1 {
   font-size: 1.3rem;
-  font-weight: 800;
+  font-weight: 600;
+  margin: 0;
 }
 
 .restaurant__name-ratings p {
   font-size: 0.9rem;
   font-weight: 700;
   color: #fff;
-  background: #28933d;
-  border-radius: 2px;
-  padding: 0.2rem 0.6rem;
+  background: #509807;
+  border-radius: 20px;
+  padding: 0 0.6rem;
+  margin: 0.1rem;
 }
 
 .restaurant__name-ratings svg {
@@ -139,41 +127,23 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-}
-.restaurant__cuisines {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  width: 60%;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
   margin-bottom: 0.2rem;
 }
 
-.restaurant__cuisines p {
-  background-color: #f3eff3;
-  padding: 0.25rem 0.5rem;
+.restaurant__cuisines-cost p {
+  margin: 0;
+}
+
+.restaurant__cuisines {
   border-radius: 3px;
-  margin: 0 2px;
   font-size: 0.8rem;
   color: #525252;
 }
 
 .cost {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   color: #8c8c8c;
-}
-
-.restaurant__cuisines-cost + hr {
-  color: #afaeaf;
-  height: 1px;
-  margin: 8px 0;
+  margin: 0;
 }
 
 .restaurant-specifications {
@@ -187,12 +157,16 @@
   -ms-flex-align: center;
   align-items: center;
 }
+
+.restaurant-specifications p,
+.error-specification h1 {
+  margin: 0;
+}
 .restaurant-specifications p {
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
   text-align: right;
-  transform: translateY(2px);
 }
 
 .restaurant-specifications__delivery-takeaway {
@@ -214,6 +188,8 @@
 .restaurant-specifications__delivery-takeaway .error-specification svg {
   color: #8c8c8c;
   margin-right: 2px;
+  -webkit-transform: translateY(-2px);
+  -ms-transform: translateY(-2px);
   transform: translateY(-2px);
 }
 
@@ -221,10 +197,17 @@
   background-color: red;
 }
 
-.specification,
-.error-specification {
-  font-size: 0.8rem;
+h1.specification,
+h1.error-specification {
+  font-size: 0.7rem;
   color: #8c8c8c;
+  margin: 0;
+}
+
+p.specification,
+p.error-specification {
+  color: #8c8c8c;
+  font-size: 0.7rem;
 }
 
 .error-specification {
@@ -235,7 +218,7 @@
 
 .specification svg,
 .error-specification svg {
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 
 @media (max-width: 960px) {
@@ -245,16 +228,6 @@
     flex: 1;
     -ms-flex-preferred-size: 100%;
     flex-basis: 100%;
-  }
-
-  .restaurant-badge {
-    top: 2.5rem;
-    left: 0.5rem;
-  }
-
-  .restaurant-badge__bottom {
-    top: 3rem;
-    left: 1rem;
   }
 
   .restaurant-card {
