--- a/src/components/RestaurantsDetail/Menu/Types/MenuTypesMobile.css
+++ b/src/components/RestaurantsDetail/Menu/Types/MenuTypesMobile.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 .menu-types__mobile-button {
   display: none;
 }
@@ -58,5 +65,6 @@
     font-size: 10px;
     -webkit-box-shadow: none;
     box-shadow: none;
+    color: #000;
   }
 }
