--- a/src/components/common/LoadingSpinner/LoadingSpinner.css
+++ b/src/components/common/LoadingSpinner/LoadingSpinner.css
@@ -8,8 +8,14 @@
   animation: spin 1500ms linear infinite;
 }
 .center-loader {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -25,9 +31,11 @@
 
 @keyframes spin {
   0% {
+    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   100% {
+    -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
