--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -11,11 +11,12 @@
 }
 
 .logo {
-  width: 10rem;
+  width: 4rem;
   height: 3rem;
+  background-color: #012933;
 }
 
-.btnn{
+.btnn {
   font-size: 1rem;
   font-family: segoe;
   font-weight: 600;
@@ -34,6 +35,7 @@
 }
 a {
   padding: 0rem;
+  color: #000;
 }
 .header-items {
   font-size: 1rem;
@@ -46,24 +48,23 @@ a {
   transition: 0.2s;
 }
 .header-items > a {
-  color: black;
+  color: #fff;
   text-decoration: none;
 }
-.header-items > a:hover {
-  color: black;
-  text-shadow: 1px 1px 1px #e0e0e0;
-  border-bottom: 4px solid #fab84c;
+.header-items > a:hover,
+.header-items > a.selected {
+  color: #fab84c;
 }
 .navbar {
-  -webkit-box-shadow: 1px 1px 10px rgb(184, 184, 184);
-  box-shadow: 1px 1px 10px rgb(184, 184, 184);
-  background-color: rgb(253, 253, 253);
+  background-color: #012933 !important;
   padding-bottom: 0.5rem;
   padding: 0rem;
   margin-bottom: 3.5rem;
 }
-.navbar-brand {
+.navbar-brand a {
   padding: 0rem;
+  background-color: #012933;
+  color: #fff;
 }
 .location {
   font-size: 1.2rem;
