--- a/src/components/AboutUs/streato_problemSolving/SectionTwoAndThree.css
+++ b/src/components/AboutUs/streato_problemSolving/SectionTwoAndThree.css
@@ -1,5 +1,5 @@
 .problem-solving {
-  padding: 2rem 1rem;
+  padding: 1rem;
 }
 
 .problem-solving h1 {
@@ -7,7 +7,7 @@
   font-size: 2.5rem;
   color: #3e313e;
   font-weight: 700;
-  margin: 4rem 0;
+  margin: 2rem 0;
 }
 
 .problem-solving__items {
@@ -81,5 +81,9 @@
 
   .problem-solving__item p {
     font-size: 1.2rem;
+  }
+
+  .problem-solving__item-img {
+    height: 12rem;
   }
 }
