--- a/src/components/Blogs/BlogHeader/BlogHeader.css
+++ b/src/components/Blogs/BlogHeader/BlogHeader.css
@@ -76,6 +76,8 @@
 }
 
 .post-blog svg {
+  -webkit-transform: translate(-4px, -16px);
+  -ms-transform: translate(-4px, -16px);
   transform: translate(-4px, -16px);
 }
 
