--- a/src/components/RestaurantsDetail/Cover/Cover.css
+++ b/src/components/RestaurantsDetail/Cover/Cover.css
@@ -1,9 +1,19 @@
 .restaurant-detail__cover {
-  height: 20rem;
-  margin-top: -3.5rem;
+  margin-top: -2rem;
+  height: 25rem;
   position: relative;
-  margin-left: -3rem;
-  margin-right: -3rem;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 1rem;
+}
+
+.restaurant-img-container.maincover {
+  grid-column: 1 / 4;
+  grid-row: 1/3;
+}
+
+.restaurant-img-container {
+  overflow: hidden;
 }
 
 .restaurant-detail__cover img {
@@ -13,54 +23,46 @@
   object-fit: cover;
 }
 
-.restaurant-detail__cover .card {
-  background-color: #3bb755;
-  padding: 0.2rem 0.8rem;
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
+.rating-badge {
   position: absolute;
-  top: 2rem;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  border-radius: 5px;
+  top: 1rem;
 }
 
-.restaurant-detail__cover .card-title {
+.rating-badge {
   font-size: 1.2rem;
   font-weight: 700;
   color: #fff;
-  text-align: center;
+  background: #509807;
+  border-radius: 20px;
+  padding: 0 1rem;
+  margin: 0.1rem;
 }
 
-.restaurant-detail__cover .card-title svg {
-  -webkit-transform: translateY(-3px);
-  -ms-transform: translateY(-3px);
-  transform: translateY(-3px);
-}
-
-.restaurant-detail__cover .card-text {
-  font-size: 1rem;
-  color: #fff;
+.rating-badge svg {
+  transform: translateY(-2.5px);
 }
 
 @media (max-width: 960px) {
   .restaurant-detail__cover {
-    margin-left: 0;
-    margin-right: 0;
+    display: block;
+    overflow: hidden;
+    margin-top: -3.5rem;
+    margin-bottom: 0;
   }
 
-  .restaurant-detail__cover .card {
-    padding: 0 0.8rem;
+  .restaurant-img-container {
+    display: none;
   }
 
-  .restaurant-detail__cover .card-title {
-    font-size: 1rem;
-    font-weight: 700;
-    color: #fff;
-    text-align: center;
+  .maincover {
+    display: block;
+    width: 100%;
+    overflow: hidden;
+  }
+}
+
+@media (max-width: 640px) {
+  .restaurant-detail__cover {
+    height: 12.5rem;
   }
 }
