--- a/src/components/RestaurantsDetail/Menu/Cart/CartItem/CartItem.css
+++ b/src/components/RestaurantsDetail/Menu/Cart/CartItem/CartItem.css
@@ -45,6 +45,7 @@
   background-color: #fff;
   padding: 0;
   font-size: 0.7rem;
+  color: #000;
 }
 
 .cart-item__customize p {
@@ -98,6 +99,8 @@
   -ms-flex-align: center;
   align-items: center;
   color: #f7c12b;
+  -webkit-transform: translateY(8px);
+  -ms-transform: translateY(8px);
   transform: translateY(8px);
 }
 
