--- a/src/components/RestaurantsDetail/Menu/Menu.css
+++ b/src/components/RestaurantsDetail/Menu/Menu.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 @font-face {
   font-family: Segoe Ui;
   src: url('../../../fonts/Segoe\ UI.ttf');
