--- a/src/components/RestaurantsDetail/Menu/OverView/OverViewItem.css
+++ b/src/components/RestaurantsDetail/Menu/OverView/OverViewItem.css
@@ -1,5 +1,12 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 .overview-item {
-  margin: 1rem 3rem;
+  padding: 1rem 3rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
