--- a/src/components/RestaurantsDetail/Menu/Types/MenuTypesDesktop.css
+++ b/src/components/RestaurantsDetail/Menu/Types/MenuTypesDesktop.css
@@ -1,10 +1,9 @@
-.menu-types {
-  -webkit-box-flex: 2;
-  -ms-flex: 2;
-  flex: 2;
-  border-right: 3px solid #cfcfcf;
-  height: 30rem;
-}
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
 
 .menu-types__heading {
   font-size: 1.5rem;
@@ -15,10 +14,16 @@
 
 .menu-types ul {
   cursor: pointer;
+  list-style: none;
+  padding-left: 0;
+  display: flex;
+  justify-content: space-evenly;
+  width: 50vw;
 }
 
 .menu-types li {
   padding: 1rem 0;
+  margin-right: 1rem;
   font-size: 1rem;
   color: #000;
 }
@@ -27,7 +32,7 @@
 .menu-types li:active,
 .menu-types li.active {
   color: #f7c12b;
-  border-right: 5px solid #f7c12b;
+  border-bottom: 5px solid #f7c12b;
 }
 
 @media (max-width: 960px) {
