--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 .main-heading-font {
   font-size: var(--xxl-font);
 }
@@ -37,32 +44,19 @@ ul li {
 
 /* -------------footer-css----------- */
 footer {
+  -webkit-box-shadow: -1px 0px 8px rgb(235, 233, 233);
   box-shadow: -1px 0px 8px rgb(235, 233, 233);
   padding-top: 3rem;
+  background-color: #012933;
 }
 
 .food-background {
   /* padding: 1rem; */
   min-width: 4rem;
   min-height: 12rem;
-  background-image: -webkit-gradient(
-      linear,
-      left top,
-      left bottom,
-      from(rgba(255, 255, 255, 0.7)),
-      to(rgba(255, 255, 255, 0.7))
-    ),
-    url('/src/components/Images/food.png');
-  background-image: -o-linear-gradient(
-      rgba(255, 255, 255, 0.7),
-      rgba(255, 255, 255, 0.7)
-    ),
-    url('/src/components/Images/food.png');
-  background-image: linear-gradient(
-      rgba(255, 255, 255, 0.7),
-      rgba(255, 255, 255, 0.7)
-    ),
-    url('/src/components/Images/food.png');
+  background-image: url('/src/images/footerlogo.png');
+  background-image: url('/src/images/footerlogo.png');
+  background-image: url('/src/images/footerlogo.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -70,7 +64,8 @@ footer {
 }
 .link-head {
   font-size: 1.5rem;
-  color: black;
+  color: #fab84c;
+  -webkit-box-shadow: none;
   box-shadow: none;
 }
 .company-links {
@@ -87,7 +82,6 @@ footer {
 .for-you-links > li,
 .company-links > li {
   margin-bottom: 0.2rem;
-  box-shadow: 1px 1px 10px rgb(238, 238, 238);
 }
 .download-button-wrapper {
   text-align: center;
@@ -357,6 +351,8 @@ footer {
   height: 100vh;
   background-color: #fab84c;
   padding: 2.5rem;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
 }
 
@@ -364,8 +360,15 @@ footer {
   height: 100vh;
   padding: 2.5rem;
   text-align: center;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
 }
+
+.login-container-right button {
+  color: #000;
+}
+
 .login-tab-btn-S {
   width: 15rem;
   height: 3rem;
@@ -396,11 +399,16 @@ footer {
 
 .login-form-container {
   width: 80%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
 .login-form {
- display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: relative;
   width: 100%;
   margin: 1rem 0 !important;
@@ -444,7 +452,7 @@ footer {
   background: none;
   padding: 0 1rem;
   border: 0.1rem solid #fab84c;
-  border-right: 0;
+
   height: 3rem;
 }
 .login-input-select-S {
@@ -492,6 +500,7 @@ footer {
 
 .login-icons {
   height: 1.5rem;
+  -ms-flex-item-align: start;
   align-self: flex-start;
 }
 
@@ -528,6 +537,9 @@ footer {
 
   .login-form-container {
     width: 80%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
 
