--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,29 @@
 * {
-  -webkit-box-sizing: content-box;
-  box-sizing: content-box;
+	-webkit-box-sizing: content-box;
+	box-sizing: content-box;
 }
 
 body,
 html {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
 }
 
 .main-container {
-  width: 85%;
-  height: auto;
-  margin: auto;
+	width: 85%;
+	height: auto;
+	margin: auto;
 }
 .row {
-  margin: 0;
+	margin: 0;
+}
+
+.home-search-bar {
+	display: none;
+}
+@media screen and (max-width: 768px) {
+	.home-search-bar {
+		display: block;
+	}
 }
